<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white"
	android:fitsSystemWindows="true"
    android:clipToPadding="true">
	<LinearLayout
		android:id="@+id/themeLayout"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/title_height"
		android:layout_alignParentTop="true"
		android:background="@color/title">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="left|center_vertical"
			android:text="@string/setting"
			android:textColor="#Ffffff"
			android:textSize="24sp"
			android:layout_weight="1.0"
			android:paddingLeft="10dp"
			android:layout_gravity="center_vertical"/>

		<ImageButton
			android:id="@+id/btn_close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/bg_btn_close"
			android:layout_gravity="right|center_vertical"
			android:gravity="right"
			android:background="@null"
			android:adjustViewBounds="true"
			android:paddingRight="10dp"/>

	</LinearLayout>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="none">

		<LinearLayout
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:paddingBottom="5dp"
			android:paddingLeft="0dp"
			android:paddingRight="0dp"
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:alpha="1.0">
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/btn_hidden">
				<Button
					android:id="@+id/opt_fileInter"
					android:layout_width="fill_parent"
					android:text=""
					android:layout_height="@dimen/btn_hidden"
					android:background="@drawable/bg_btn_setting"
					android:drawableLeft="@drawable/ic_menu_fmode"
					android:textSize="17sp"
					android:textColor="@color/btn_text_colors"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:gravity="left|center_vertical"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="@string/file_inter"
					android:layout_marginLeft="60dp"
					android:textSize="18sp"
					android:textColor="@color/btn_new_text"
					android:gravity="center_vertical"/>
			</RelativeLayout>
			<LinearLayout
				android:layout_height="1dp"
				android:layout_width="fill_parent"
				android:background="@color/white"
				android:paddingLeft="60dp">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#eecccccc"/>
			</LinearLayout>
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/btn_hidden">
				<Button
					android:id="@+id/opt_setFolder"
					android:layout_width="fill_parent"
					android:text=""
					android:layout_height="@dimen/btn_hidden"
					android:background="@drawable/bg_btn_setting"
					android:textSize="17sp"
					android:textColor="@color/btn_text_colors"
					android:drawableLeft="@drawable/ic_menu_folder"
					android:paddingLeft="10dp"
					android:gravity="left|center_vertical"
					android:paddingRight="10dp"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="@string/file_folder"
					android:layout_marginLeft="60dp"
					android:textSize="18sp"
					android:textColor="@color/btn_new_text"
					android:gravity="center_vertical"/>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:layout_alignParentRight="true"
					android:paddingTop="18dp">
					<com.binxin.zdapp.view.SlidButton
						android:id="@+id/sld_folder"
						android:layout_width="65dp"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_gravity="center_vertical"
						android:layout_marginRight="1dp"
						android:gravity="center_vertical"/>
				</LinearLayout>
			</RelativeLayout>
			<LinearLayout
				android:layout_height="1dp"
				android:layout_width="fill_parent"
				android:background="@color/white"
				android:paddingLeft="60dp">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#eecccccc"/>
			</LinearLayout>
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/btn_hidden">
				<Button
					android:id="@+id/opt_setFileHide"
					android:layout_width="fill_parent"
					android:text=""
					android:layout_height="@dimen/btn_hidden"
					android:background="@drawable/bg_btn_setting"
					android:drawableLeft="@drawable/ic_menu_fhide"
					android:textSize="17sp"
					android:textColor="@color/btn_text_colors"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:gravity="left|center_vertical"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="@string/file_showhide"
					android:layout_marginLeft="60dp"
					android:textSize="18sp"
					android:textColor="@color/btn_new_text"
					android:gravity="center_vertical"/>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:layout_alignParentRight="true"
					android:paddingTop="18dp">
					<com.binxin.zdapp.view.SlidButton
						android:id="@+id/sld_fileHide"
						android:layout_width="65dp"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_gravity="center_vertical"
						android:layout_marginRight="1dp"
						android:gravity="center_vertical"/>
				</LinearLayout>
			</RelativeLayout>
			<LinearLayout
				android:layout_height="1dp"
				android:layout_width="fill_parent"
				android:background="@color/white"
				android:paddingLeft="60dp">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="1dp"
					android:background="#eecccccc"/>
			</LinearLayout>
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="@dimen/btn_hidden">
				<Button
					android:id="@+id/opt_setFileSave"
					android:layout_width="fill_parent"
					android:text=""
					android:layout_height="@dimen/btn_hidden"
					android:background="@drawable/bg_btn_setting"
					android:drawableLeft="@drawable/ic_menu_fsave"
					android:textSize="17sp"
					android:textColor="@color/btn_text_colors"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:gravity="left|center_vertical"/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="@string/file_savedc"
					android:layout_marginLeft="60dp"
					android:textSize="18sp"
					android:textColor="@color/btn_new_text"
					android:gravity="center_vertical"/>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:layout_alignParentRight="true"
					android:paddingTop="18dp">
					<com.binxin.zdapp.view.SlidButton
						android:id="@+id/sld_fileSave"
						android:layout_width="65dp"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_gravity="center_vertical"
						android:layout_marginRight="1dp"
						android:gravity="center_vertical"/>
				</LinearLayout>
			</RelativeLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

